# commitee-manager

./: .gitignore  README.md  pyproject.toml
committee_manager/: __init__.py
committee_manager/cli/: __init__.py  main.py
committee_manager/engine/: __init__.py  allocator.py
committee_manager/io/: __init__.py  committee_loader.py  people_loader.py  rule_loader.py
committee_manager/models/: __init__.py  committee.py  person.py
committee_manager/reporting/: __init__.py  rationale.py
committee_manager/rules/: __init__.py  base.py  library.py
committee_manager/web/: __init__.py  app.py
examples/: committees.csv  people.csv  rules.yaml
tests/: test_allocator.py  test_cli_integration.py  test_models.py  test_reporting.py  test_rule_loader.py  test_rules.py  test_webapp.py
