[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "committee_manager"
version = "0.1.0"
description = "A package for managing committees."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Example Author", email = "author@example.com"}]
dependencies = ["PyYAML"]
